--- a/src/app/01_home/home-page/home.page.html
+++ b/src/app/01_home/home-page/home.page.html
@@ -1,1 +1,16 @@
-<p>hompage works!</p>
+<div id="banner">
+  <img [src]="path" alt="" />
+  <div>
+    <h1>your eco-friendly fashion website</h1>
+    <button class="btn-green">learn more</button>
+  </div>
+</div>
+
+<div>
+  <h2>★ our bestsellers</h2>
+  <button>shop now</button>
+</div>
+
+<div>
+  <h2>♥ what they say</h2>
+</div>
