--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
+
 /* ----------- font ----------- */
-$font-serif: Georgia, 'Times New Roman', Times, serif;
-$font-sans-serif: Arial, Helvetica, sans-serif;
+$font-serif: 'Playfair Display', serif;
+$font-sans-serif: 'Roboto Condensed', sans-serif;
 
 $font-size-xs: 0.5rem;
 $font-size-s: 1rem;
