--- a/src/app/credits/credits-page/credits.page.html
+++ b/src/app/credits/credits-page/credits.page.html
@@ -2,5 +2,7 @@
 
 <p>Logo icon made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
 
-<h4>Homepage</h4>
+<h4>Photos/h4>
 <p>Photo by <a href="https://unsplash.com/@matthewhenry?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Matthew Henry</a> on <a href="https://unsplash.com/s/photos/sustainable-fashion?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+<p>Photo by <a href="https://unsplash.com/@eliapelle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Elia Pellegrini</a> on <a href="https://unsplash.com/@gripa_/likes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
+<p>Photo by <a href="https://unsplash.com/@li_anlim?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Li-An Lim</a> on <a href="https://unsplash.com/s/photos/sustainability?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a></p>
