--- a/src/app/01_home/home-page/home.page.html
+++ b/src/app/01_home/home-page/home.page.html
@@ -8,22 +8,22 @@
 </div>
 
 <div id="bestsellers">
-  <h2>★ our bestsellers</h2>
+  <h2>★ bestsellers ★</h2>
   <div>
     <div class="outlined">
       <img [src]="imgList[0]" alt="" />
       <h3>Bestseller</h3>
-      <button class="btn-primary">shop now</button>
+      <button class="btn-primary">shop now!</button>
     </div>
     <div class="outlined">
       <img [src]="imgList[1]" alt="" />
       <h3>Bestseller</h3>
-      <button class="btn-primary">shop now</button>
+      <button class="btn-primary">shop now!</button>
     </div>
     <div class="outlined">
       <img [src]="imgList[2]" alt="" />
       <h3>Bestseller</h3>
-      <button class="btn-primary">shop now</button>
+      <button class="btn-primary">shop now!</button>
     </div>
   </div>
 </div>
