--- a/src/app/05_products/products-page/products.page.html
+++ b/src/app/05_products/products-page/products.page.html
@@ -1,6 +1,6 @@
 <div>
     <h1>{{prodType}}</h1>
-    <p>{{prodList.length}} intems</p>
+    <p>{{prodList.length}} items</p>
 </div>
 
 <div class="items">
