--- a/src/app/05_products/product-card/product-card.component.scss
+++ b/src/app/05_products/product-card/product-card.component.scss
@@ -1,17 +1,52 @@
-@import '/src/scss/variables';
-@import '/src/scss/mixins';
+@import "/src/scss/variables";
+@import "/src/scss/mixins";
 
 .card {
-    padding: 1.5rem;
-    margin: 2.5rem auto;
-    width: 95%;
-    background-color: $light-almond;
-    img {
-        margin: 1rem auto;
-        width: 95%;
-        height: auto;
+  padding: 1.5rem;
+  margin: 2.5rem auto;
+  width: 90%;
+  height: fit-content;
+  background-color: $light-almond;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  outline: 2px solid $dark-almond;
+  outline-offset: 5px;
+  .thumbnail {
+    width: 100%;
+    height: 300px;
+    background-color: $dark-almond;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    @include screen-min($screen-l) {
+      height: 470px;
     }
-    button {
-        width: 100%;
+  }
+  h2 {
+    margin: 2rem auto;
+
+}
+p {
+    font-size: $font-size-m;
+}
+  .colours {
+    width: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    div {
+      height: 15px;
+      width: 15px;
+      border-radius: 50%;
+      border: 1px solid $dark-grey;
     }
+  }
+}
+button {
+  width: 100%;
+  margin: 3rem auto;
+  @include screen-min($screen-l) {
+    width: initial;
+  }
 }
