--- a/src/app/04_profile/user-detail/user-detail.component.css
+++ b/src/app/04_profile/user-detail/user-detail.component.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=user-detail.component.css.map */
+div {
+  margin: 3rem auto;
+}
+div p {
+  text-transform: lowercase;
+}
+div span {
+  text-transform: initial;
+  font-weight: bold;
+}/*# sourceMappingURL=user-detail.component.css.map */
