--- a/src/app/04_profile/user-detail/user-detail.component.html
+++ b/src/app/04_profile/user-detail/user-detail.component.html
@@ -1,6 +1,6 @@
 <div>
-    <p>{{userData.firstname}}</p>
-    <p>{{userData.lastname}}</p>
-    <p>{{userData.email}}</p>
-    <p>{{userData.phone}}</p>
+    <p>First name: <span>{{userData.firstname}}</span></p>
+    <p>Last name: <span>{{userData.lastname}}</span></p>
+    <p>Email: <span>{{userData.email}}</span></p>
+    <p>Phone number: <span>{{userData.phone}}</span></p>
 </div>
