--- a/src/app/06_product-detail/product-gallery/product-gallery.component.html
+++ b/src/app/06_product-detail/product-gallery/product-gallery.component.html
@@ -1,8 +1,4 @@
-<div>
-    <img [src]="" [alt]="">
-</div>
-
-<div>
-    <a href=""><div></div></a>
-</div>
-
+<div
+    class="imgs"
+    [style.background-image]="'url(/assets/imgs/' + product.productImgs+ ')'"
+  ></div>
