--- a/src/app/00_header/panel/panel.component.scss
+++ b/src/app/00_header/panel/panel.component.scss
@@ -3,33 +3,30 @@
 
 #panel {
   display: flex;
+  flex-direction: column-reverse;
   justify-content: space-between;
+  align-items: flex-end;
+  @include screen-min($screen-s) {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 #login {
-  display: none;
-  @include screen-min($screen-m) {
-    display: inline;
-    margin-right: 0.5rem;
-  }
   button {
-    width: 6rem;
-    a {
-      color: $light-almond;
-      transition: all .3s ease-out;
-      display: inline-block;
+    width: fit-content;
+    align-self: flex-end;
+    margin: 0 0 0.5rem 0;
+    @include screen-min($screen-s) {
+      margin-right: 0.5rem; 
     }
-    i {
-      display: none;
-    }
-    &:hover {
-      box-shadow: none;
-      a {
-        transform: translateX(-5px);
-      }
-      i {
-        display: inline;
-      }
-    }
+  }
+}
+
+.icon-btn {
+  margin: 0.5rem 0;
+  @include screen-min($screen-s) {
+    margin: 0.5rem; 
   }
 }
