--- a/src/app/06_product-detail/product-detail-card/product-detail-card.component.html
+++ b/src/app/06_product-detail/product-detail-card/product-detail-card.component.html
@@ -1,20 +1,30 @@
 <div class="card-detail">
-    <h1>{{product.productName}}</h1>
-    <p class="price">{{product.price}} €</p>
-    <p>{{product.colours}}</p>
+  <h1>{{ product.productName }}</h1>
+  <p class="price">{{ product.price }} €</p>
+  <p>{{ product.colours }}</p>
 
-    <div class="sizes">
-        <input type="checkbox" id="sizeXS" name="sizeXS" value="xs">
-        <label for="sizeXS">XS</label><br>
-        <input type="checkbox" id="sizeS" name="sizeS" value="s">
-        <label for="sizeS">S</label><br>
-        <input type="checkbox" id="sizeM" name="sizeM" value="m">
-        <label for="sizeM">M</label><br>
-        <input type="checkbox" id="sizeL" name="sizeL" value="l">
-        <label for="sizeL">L</label><br>
-        <input type="checkbox" id="sizeXL" name="sizeXL" value="xl">
-        <label for="sizeXL">XL</label><br>
+  <div class="sizes">
+    <div>
+      <input type="checkbox" id="sizeXS" name="sizeXS" value="xs" />
+      <label for="sizeXS">XS</label><br />
     </div>
+    <div>
+      <input type="checkbox" id="sizeS" name="sizeS" value="s" />
+      <label for="sizeS">S</label><br />
+    </div>
+    <div>
+      <input type="checkbox" id="sizeM" name="sizeM" value="m" />
+      <label for="sizeM">M</label><br />
+    </div>
+    <div>
+      <input type="checkbox" id="sizeL" name="sizeL" value="l" />
+      <label for="sizeL">L</label><br />
+    </div>
+    <div>
+      <input type="checkbox" id="sizeXL" name="sizeXL" value="xl" />
+      <label for="sizeXL">XL</label><br />
+    </div>
+  </div>
 
-    <button class="btn-primary" type="button">Add to cart</button>
+  <button class="btn-primary" type="button">Add to cart</button>
 </div>
