--- a/src/app/06_product-detail/product-gallery/product-gallery.component.css
+++ b/src/app/06_product-detail/product-gallery/product-gallery.component.css
@@ -1,5 +1,1 @@
-a div {
-  background-color: red;
-  width: 12px;
-  height: 3px;
-}/*# sourceMappingURL=product-gallery.component.css.map */
+/*# sourceMappingURL=product-gallery.component.css.map */
