--- a/src/app/06_product-detail/product-page/product-detail.page.html
+++ b/src/app/06_product-detail/product-page/product-detail.page.html
@@ -1,4 +1,6 @@
-<app-breadcrumb [product]="product"></app-breadcrumb>
-<app-product-gallery [product]="product"></app-product-gallery>
-<app-product-detail-card [product]="product"></app-product-detail-card>
-<app-product-description [product]="product"></app-product-description>
+<div>
+  <app-breadcrumb [product]="product"></app-breadcrumb>
+  <app-product-gallery [product]="product"></app-product-gallery>
+  <app-product-detail-card [product]="product"></app-product-detail-card>
+  <app-product-description [product]="product"></app-product-description>
+</div>
