--- a/src/app/credits/credits-page/credits.page.css
+++ b/src/app/credits/credits-page/credits.page.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=credits.page.css.map */
+h2 {
+  margin: 3rem auto;
+}
+
+h3 {
+  margin: 2rem auto 1rem auto;
+}/*# sourceMappingURL=credits.page.css.map */
