--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,73 +1,103 @@
 button {
-    font-weight: bold;
-    padding: 0.5rem 2rem;
-    font-family: $font-serif;
-    font-size: $font-size-s;
-    text-transform: lowercase;
-    margin: 1rem 0;
-    border-radius: 3px;
+  font-weight: bold;
+  padding: 0.5rem 2rem;
+  font-family: $font-serif;
+  font-size: $font-size-s;
+  text-transform: lowercase;
+  margin: 1rem 0;
+  border-radius: 3px;
 }
 
 .btn-primary {
-    border: none;
-    color: $light-almond;
-    background-color: $brown;
-    &:hover {
-        box-shadow: 2px 2px 4px 1px $dark-brown;  
-    }
-    &:active {
-        transform: translateY(0.5px);
-    }
+  border: none;
+  color: $light-almond;
+  background-color: $brown;
+  &:hover {
+    box-shadow: 2px 2px 4px 1px $dark-brown;
+  }
+  &:active {
+    transform: translateY(0.5px);
+  }
 }
 
 .btn-secondary {
-    border: 1px solid $dark-brown;
-    background-color: transparent;
-    color: $dark-brown;
-    &:hover {
-        background-color: $dark-almond;  
-    }
-    &:active {
-        transform: scale(99%) ;
-    }
+  border: 1px solid $dark-brown;
+  background-color: transparent;
+  color: $dark-brown;
+  &:hover {
+    background-color: $dark-almond;
+  }
+  &:active {
+    transform: scale(99%);
+  }
 }
 
-.btn-green{
-    background-color: $blue-grey;
+.btn-green {
+  background-color: $blue-grey;
+  color: $light-almond;
+  border: none;
+  a {
     color: $light-almond;
-    border: none;
-    &:hover {
-        background-color: $dark-sage;
-        box-shadow: 2px 2px 4px 1px $blue-grey;  
-    }
-    &:active {
-        transform: scale(99%) ;
-    }
+    text-decoration: none;
+  }
+  &:hover {
+    background-color: $dark-sage;
+    box-shadow: 2px 2px 4px 1px $blue-grey;
+  }
+  &:active {
+    transform: scale(99%);
+  }
 }
 
 .nav-btn {
-    background-color: $sage;
-    border: transparent;
-    padding: 0;
-    i {
-        font-size: $font-size-m;
-    }
-    &:hover, &:active {
-        color: $almond;
-    }
+  background-color: $sage;
+  border: transparent;
+  padding: 0;
+  i {
+    font-size: $font-size-m;
+  }
+  &:hover,
+  &:active {
+    color: $almond;
+  }
 }
 
 .icon-btn {
-    border: none;
-    border-radius: 100%;
-    width: 2rem;
-    height: 2rem;
-    margin-left: 0.5rem;
-    background-color: $mint;
-    padding: 0;
-    a {
-        color: $blue-grey;
-        font-size: $font-size-s;
-        text-decoration: none;
+  border: none;
+  border-radius: 100%;
+  width: 2rem;
+  height: 2rem;
+  margin-left: 0.5rem;
+  background-color: $mint;
+  padding: 0;
+  a {
+    color: $blue-grey;
+    font-size: $font-size-s;
+    text-decoration: none;
+  }
+}
+
+.log-btn {
+  width: 6rem;
+  a {
+    transition: all 0.3s ease-out;
+    display: inline-block;
+    &:hover,
+    &:active {
+      color: $light-almond;
     }
+  }
+  i {
+    display: none;
+  }
+  &:hover {
+    box-shadow: none;
+    a {
+      transform: translateX(-5px);
+    }
+    i {
+      display: inline;
+      margin-left: 0.2rem;
+    }
+  }
 }
