--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,10 @@ button {
   color: #fcf4d1;
   border: none;
 }
+.btn-green a {
+  color: #fcf4d1;
+  text-decoration: none;
+}
 .btn-green:hover {
   background-color: #668C75;
   box-shadow: 2px 2px 4px 1px #384b45;
@@ -77,6 +81,30 @@ button {
   color: #384b45;
   font-size: 1rem;
   text-decoration: none;
+}
+
+.log-btn {
+  width: 6rem;
+}
+.log-btn a {
+  transition: all 0.3s ease-out;
+  display: inline-block;
+}
+.log-btn a:hover, .log-btn a:active {
+  color: #fcf4d1;
+}
+.log-btn i {
+  display: none;
+}
+.log-btn:hover {
+  box-shadow: none;
+}
+.log-btn:hover a {
+  transform: translateX(-5px);
+}
+.log-btn:hover i {
+  display: inline;
+  margin-left: 0.2rem;
 }
 
 .form-container {
